--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,9 +6,9 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.postprocessing": "3.4.0",
+    "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.8.6",
     "com.unity.visualscripting": "1.9.4",
-    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
